--- a/css/styles.css
+++ b/css/styles.css
@@ -31,3 +31,27 @@ h3{
     justify-content: right;
     align-items: center;
 }
+.grid > div{
+    display: grid;
+    grid-template: "photo name" 60px
+                    "photo position" 60px / 65px 1fr; 
+    column-gap: 29px;
+}
+.grid img{
+    border-radius: 50%;
+    grid-area: photo;
+}
+.grid h2{
+    grid-area: name;
+    align-self: end;
+}
+.grid h3{
+    grid-area: position;
+}
+.inline-block > div li{
+   display: inline-block;
+}
+.float > div img{
+    float: left;
+    margin-right: 23px;
+}
